--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.title {
+  padding: 30px;
   color: white;
+  background-color: black;
 }
-
-.App-link {
-  color: #61dafb;
+.model {
+  margin: 30px 0;
+  display: flex;
+  justify-content: space-around;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.prototype {
+  position: relative;
+}
+.glasses_prototype {
+  position: absolute;
+  z-index: 2;
+  top: 26%;
+  right: 50%;
+  transform: translateX(50%);
+  opacity: 0.7;
+}
+.card-img-overlay {
+  top: auto;
+  bottom: 0px;
+  background-color: #fcbc8ea8;
+  padding: 0 5px;
+}
+.card-text {
+  font-size: 12px;
+  color: white;
+  margin-bottom: 6px !important;
+}
+.card-title {
+  color: blue;
+  font-size: 16px;
+  margin-bottom: 0;
+}
+.classesList {
+  width: 80%;
+  margin: 0 auto;
 }
